--- a/index.html
+++ b/index.html
@@ -75,21 +75,20 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6">
-                                <p>Hi there, I’m <strong>Bahaa Yassine</strong>.</p>
+                            <div class="col-md-12">
                                 <p>
-                                    I am a skilled developer with expertise in a variety of programming languages. 
-                                    For web development, I am proficient in HTML, CSS, JavaScript, jQuery, PHP, Ajax, JSON and Laravel, Bootstrap Frameworks.
-                                    In addition of multiple databases as MYSQL, Microsoft SQL SERVER, Firebase and SQlite. 
+                                    A dedicated and proficient Web Developer with a strong foundation in front-end and back-end technologies.
+                                    Skilled in HTML, CSS, JavaScript, and jQuery for crafting responsive and dynamic user interfaces.
                                     <br>
-                                    In the realm of mobile app development, I have a strong command of Java. My knowledge 
-                                    and experience in these languages enable me to create dynamic web and mobile applications with a 
-                                    focus on user-friendly design and functionality.
+                                    Proficient in utilizing frameworks like Bootstrap to streamline development processes and ensure
+                                    cross-browser compatibility.
+                                    <br>
+                                    Experienced in server-side scripting with PHP and adept in database management with MySQL and SQL Server.
                                 </p>
                             </div>
-                            <div class="col-md-6 text-center">
+                            <!-- <div class="col-md-6 text-center">
                                 <img src="resources/images/image.jpg">
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -115,7 +114,7 @@
                                 <div class="form-group">
                                     <ul class="pl-3">
                                         <li>
-                                            <b>Certificate from Udemy - 37 hours.</b>
+                                            <b>PHP Certificate from Udemy - 37 hours.</b>
                                             <p>
                                                 This course encompassed a wide range of essential competencies, 
                                                 including Object-Oriented PHP, effective use of arrays and data structures, 
@@ -136,6 +135,19 @@
                                                 During this course, I have acquired to utilizing Laravel's powerful features, 
                                                 such as Eloquent ORM for database interaction, Blade templating, authentication 
                                                 and authorization systems, routing, middleware and testing.
+                                            </p>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <ul class="pl-3">
+                                        <li>
+                                            <b>PHP Certificate from M3aarf Platform - 12 hours.</b>
+                                            <p>
+                                                Building and development of web applications (Front and Back End), 
+                                                including testing code and ability to troubleshooting issues.
                                             </p>
                                         </li>
                                     </ul>
@@ -172,6 +184,11 @@
                                     <a href="resources/images/laravel.jpg"><img src="resources/images/laravel.jpg" id="img_certificate"></a>
                                 </div>
                             </div>
+                            <div class="col-md-6">
+                                <div class="form-group text-center">
+                                    <a href="resources/images/php-maaref.jpg"><img src="resources/images/php-maaref.jpg" id="img_certificate"></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -205,7 +222,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <a href="http://webshop.great-site.net" class="project">
+                                    <a href="https://e-commerce.spacesoftwaresolutions.com" class="project">
                                         <i class="fa fa-globe" id="project-icon"></i>
                                         <span class="text">E-Commerce Website</span>
                                     </a>
