--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 </head>
 <body>
-    <div class="container" id="device-navbar">
+    <div class="container-fluid" id="device-navbar">
         <div class="row">
             <div class="col-md-12">
                 <div class="form-group text-right">
@@ -52,6 +52,9 @@
                         </div>
                         <div class="col header-item" id="btn_projects" onclick="projects();">
                             Projects
+                        </div>
+                        <div class="col header-item" id="btn_cv" onclick="cv();">
+                            CV
                         </div>
                     </div>
                 </div>
@@ -83,7 +86,7 @@
                                     Proficient in utilizing frameworks like Bootstrap to streamline development processes and ensure
                                     cross-browser compatibility.
                                     <br>
-                                    Experienced in server-side scripting with PHP and adept in database management with MySQL and SQL Server.
+                                    Experienced in server-side scripting with PHP and adept in database management with MySQL and Microsoft SQL Server.
                                 </p>
                             </div>
                             <!-- <div class="col-md-6 text-center">
@@ -259,6 +262,9 @@
                 </div>
                 <div class="col-md-12 device-menu-item" id="btn_device_projects" onclick="projects()">
                     Projects
+                </div>
+                <div class="col-md-12 device-menu-item" id="btn_device_cv" onclick="cv()">
+                    CV
                 </div>
             </div>
             <div class="row row-close p-0 m-0" id="row_close">
