updated section about-me

--- a/index.html
+++ b/index.html
@@ -80,13 +80,17 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p>
-                                    A dedicated and proficient Web Developer with a strong foundation in front-end and back-end technologies.
-                                    Skilled in HTML, CSS, JavaScript, and jQuery for crafting responsive and dynamic user interfaces.
+                                    As a dedicated and proficient Web Developer, I have built a robust foundation in both front-end
+                                    and back-end technologies. My expertise lies in HTML, CSS, JavaScript, and jQuery, allowing me
+                                    to craft responsive and dynamic user interfaces. I proficiently utilize frameworks like bootstrap
+                                    to streamline development workflows and ensure seamless cross-browser compatibility.
                                     <br>
-                                    Proficient in utilizing frameworks like Bootstrap to streamline development processes and ensure
-                                    cross-browser compatibility.
+                                    Furthermore, I bring extensive experience in server-side scripting with PHP, enabling me to create
+                                    efficient and reliable web applications. I am adept at managing databases using MySQL
+                                    and Microsoft SQL Server, ensuring optimal performance and data integrity.
                                     <br>
-                                    Experienced in server-side scripting with PHP and adept in database management with MySQL and Microsoft SQL Server.
+                                    Moreover, my proficiency in leveraging the Laravel framework further enhances my capabilities,
+                                    enabling me to develop web solutions with enhanced efficiency and scalability.
                                 </p>
                             </div>
                             <!-- <div class="col-md-6 text-center">
