fixed project url

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <p class="project-category">Developed a dynamic online e-commerce WebApp crafted with a blend of languages as HTML, CSS, JavaScript, jQuery, Ajax, Bootstrap for the client-side and PHP for server-side processing and MySQL for robust database management. With a sleek and user-friendly interface powered by responsive design elements, customers can effortlessly browse, search, and purchase products.</p>
                     <strong class="project-title">
                         <span>E-Commerce</span>
-                        <a href="https:e-commerce.spacesoftwaresolutions.com" class="more-details" target="_blank">More details</a>
+                        <a href="https://e-commerce.spacesoftwaresolutions.com" class="more-details" target="_blank">More details</a>
                     </strong>
                 </div>
             </div>
