--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <a href="#courses">Courses</a>
             <a href="#certifications">Certifications</a>
             <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
             <a href="#cv">CV</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
@@ -138,7 +138,12 @@
         </div>
     </section>
 
-    <section class="bg-white contact" id="contact">
+    <section class="bg-white contact" id="cv">
+        <h2 class="title">CV</h2>
+        <iframe id="pdfIframe" style="width: 100%;" src=""></iframe>
+    </section>
+
+    <section class="bg-black contact" id="contact">
         <h2 class="title">Contact</h2>
         <div class="content">
             <div class="card">
@@ -160,11 +165,6 @@
                 </div>
             </div>
         </div>
-    </section>
-
-    <section class="bg-black contact" id="cv">
-        <h2 class="title">CV</h2>
-        <iframe id="pdfIframe" style="width: 100%;" src=""></iframe>
     </section>
     
     <footer class="footer">
