added navigation-menu on mobile view

--- a/index.html
+++ b/index.html
@@ -30,7 +30,19 @@
             <a href="#cv">CV</a>
             <a href="#contact">Contact</a>
         </nav>
+        <i class="fas fa-bars bars-icon" id="bars-icon"></i>
     </header>
+
+    <section class="menu">
+        <nav class="navigation-menu">
+            <a href="#education">Education</a>
+            <a href="#courses">Courses</a>
+            <a href="#certifications">Certifications</a>
+            <a href="#projects">Projects</a>
+            <a href="#cv">CV</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </section>
 
     <section class="main">
         <div>
